--- a/report.Rmd
+++ b/report.Rmd
@@ -334,35 +334,185 @@ if (!is.null(params$group_stats_tbl)) {
 metrics = c("Count", "Representation Index", "Proportion Identified",
                         "Relative Risk")
 
-plots = lapply(metrics, equity_plot_multi,
-              data=params$data,
-              group=params$group,
-              reference_grp=params$group_filter_string,
-              pathways=pathways,
-              baseline_id_var=params$baseline_id_var,
-              selected_pathway=1,
-              selected_pathway_name=pathway_label_list[[1]])
 
-plots[[1]]$p
+paths = if(params$last_pathway == 1) {               
+               1} else {
+                 1:(params$last_pathway + 1)
+                 }
+
+plot_params = expand_grid(metrics, paths)
+
+
+plots = mapply(equity_plot_multi, 
+               plot_metric = plot_params[["metrics"]],
+               selected_pathway = plot_params[["paths"]],
+               selected_pathway_name = pathway_label_list[plot_params[["paths"]]],
+               MoreArgs=list(
+                  data=params$data,
+                  group=params$group,
+                  reference_grp=params$group_filter_string,
+                  pathways=pathways,
+                  baseline_id_var=params$baseline_id_var),
+               SIMPLIFY = FALSE)
+
+```
+
+```{r}
+if (length(plots) >= 1) {
+  plots[[1]]$p
+}
 
 ```
 
 <br>
 
 ```{r}
-plots[[2]]$p
+if (length(plots) >= 2) {
+  plots[[2]]$p
+}
 ```
 
 <br>
 
 ```{r}
-plots[[3]]$p
+if (length(plots) >= 3) {
+  plots[[3]]$p
+}
 ```
 
 <br>
 
 ```{r}
-plots[[4]]$p
+if (length(plots) >= 4) {
+  plots[[4]]$p
+}
 ```
 
+<br>
+
+```{r}
+if (length(plots) >= 5) {
+  plots[[5]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 6) {
+  plots[[6]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 7) {
+  plots[[7]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 8) {
+  plots[[8]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 9) {
+  plots[[9]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 10) {
+  plots[[10]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 11) {
+  plots[[11]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 12) {
+  plots[[12]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 13) {
+  plots[[13]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 14) {
+  plots[[14]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 15) {
+  plots[[15]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 16) {
+  plots[[16]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 17) {
+  plots[[17]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 18) {
+  plots[[18]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 19) {
+  plots[[19]]$p
+}
+```
+
+<br>
+
+```{r}
+if (length(plots) >= 20) {
+  plots[[20]]$p
+}
+```
 
